--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -81,199 +81,220 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-2.webp" alt="v1">
+                <p class="time">8:22</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-2.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        Try Not To Laugh Challenge #9
+                    </h4>
+                    <p class="name">Markiplier</p>
+                    <p class="info">19M views . 4years ago</p>
+                </div>
+            </div>
+            </a>
+        </div>
+        
+        <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-4.webp" alt="v1">
+                <p class="time">22:24</p>
+            </div>
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-4.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">
+                        The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                    </h4>
+                    <p class="name">Veritasium</p>
+                    <p class="info">18M views . 4 months ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-5.webp" alt="v1">
+                <p class="time">11:17</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-5.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        Kadane's Algorithm to Maximum Sum Subarray Problem
+                    </h4>
+                    <p class="name">CS Dojo</p>
+                    <p class="info">519K views . 5 year ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-6.webp" alt="v1">
+                <p class="time">19:42</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-6.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        Anything You Can Fit In The Circle I’ll Pay For
+                    </h4>
+                    <p class="name">MrBeast</p>
+                    <p class="info">328M views . 5 years ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-7.webp" alt="v1">
+                <p class="time">10:13</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-7.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">Why Planes Don't Fly Over Tibet</h4>
+                    <p class="name">
+                        RealLifeLore
+                    </p>
+                    <p class="info">8.4M views . 5 years ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=lFm4EM1juls">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-8.webp" alt="v1">
+                <p class="time">7:12</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-8.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        Inside The World's Biggest Passenger Plane
+                    </h4>
+                    <p class="name">Tech Vision</p>
+                    <p class="info">3.7M views . 10 months ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-9.webp" alt="v1">
+                <p class="time">13:17</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-9.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        The SECRET to Super Human STRENGTH
+                    </h4>
+                    <p class="name">ThenX</p>
+                    <p class="info">20M views . 3 year ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-10.webp" alt="v1">
+                <p class="time">7:53</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-10.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+                    </h4>
+                    <p class="name">Business Insider</p>
+                    <p class="info">14M views · 1 year ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-11.webp" alt="v1">
+                <p class="time">4:10</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-11.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+                    </h4>
+                    <p class="name">Destination Tips</p>
+                    <p class="info">4.7M views  5 years ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-12.webp" alt="v1">
+                <p class="time">4:51</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-12.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">
+                        What would happen if you didn’t drink water? - Mia Nacamulli
+                    </h4>
+                    <p class="name">TED-Ed</p>
+                    <p class="info">23M views . 9 years ago</p>
                 </div>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-3.webp" alt="v1">
+                <p class="time">9:13</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-3.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
-                </div>
-            </div>
-            </a>
-        </div>
-        <div class="card">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
-            <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
-                <p class="time">15:00</p>
-            </div>
-            <div class="inner_card">
-                <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
-                </div>
-                <div class="text_card">
-                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
-                    <p class="name">Marques Brownlee</p>
-                    <p class="info">3.4M views . 6 months ago</p>
+                    <h4 class="title">Crazy Tik Toks Taken Moments Before DISASTER</h4>
+                    <p class="name">SSSniperWolf</p>
+                    <p class="info">12M views . 1 year ago</p>
                 </div>
             </div>
             </a>
