--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -65,12 +65,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-1.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
@@ -83,12 +83,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-2.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-2.webp" alt="v1">
                 <p class="time">8:22</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-2.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-2.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -104,12 +104,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-4.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-4.webp" alt="v1">
                 <p class="time">22:24</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-4.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-4.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -124,12 +124,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-5.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-5.webp" alt="v1">
                 <p class="time">11:17</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-5.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-5.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -144,12 +144,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-6.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-6.webp" alt="v1">
                 <p class="time">19:42</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-6.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-6.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -164,12 +164,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-7.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-7.webp" alt="v1">
                 <p class="time">10:13</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-7.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-7.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">Why Planes Don't Fly Over Tibet</h4>
@@ -184,12 +184,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=lFm4EM1juls">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-8.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-8.webp" alt="v1">
                 <p class="time">7:12</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-8.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-8.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -204,12 +204,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-9.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-9.webp" alt="v1">
                 <p class="time">13:17</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-9.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-9.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -224,12 +224,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-10.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-10.webp" alt="v1">
                 <p class="time">7:53</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-10.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-10.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -244,12 +244,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-11.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-11.webp" alt="v1">
                 <p class="time">4:10</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-11.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-11.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -264,12 +264,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-12.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-12.webp" alt="v1">
                 <p class="time">4:51</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-12.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-12.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">
@@ -284,12 +284,12 @@
         <div class="card">
             <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
             <div class="t_box">
-                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-3.webp" alt="v1">
+                <img class="thumbnail" src="./thumbnails/thumbnail-3.webp" alt="v1">
                 <p class="time">9:13</p>
             </div>
             <div class="inner_card">
                 <div class="pic_con">
-                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-3.jpeg" alt="channel logo">
+                    <img class="pic" src="./logo/channel-3.jpeg" alt="channel logo">
                 </div>
                 <div class="text_card">
                     <h4 class="title">Crazy Tik Toks Taken Moments Before DISASTER</h4>
