--- a/js project/ai summarizer extension/options.html
+++ b/js project/ai summarizer extension/options.html
@@ -4,8 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extension Options</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            max-width: 600px;
+            padding: 20px;
+            margin: 0 auto;
+        }
+
+        h1{
+            color: #4285f4;
+        }
+        
+        .form-group{
+            margin-bottom: 20px;
+        }
+
+        label{
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        input[type="text"]{
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        button{
+            background-color: #4285f4;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.2s ease-out; 
+        }
+
+        button:hover{
+            background-color: #3367d6;
+            transition: background-color 0.2s ease-in-out; 
+        }
+
+        .success-message{
+            color: green;
+            display: none;
+        }
+
+    </style>
 </head>
 <body>
-    hello
+    <h1>AI Summary Settings</h1>
+
+    <div class="form-group">
+        <label for="api-key">Gemini API Key</label>
+        <input type="text" id="api-key" placeholder="Enter your Gemini API key" />
+
+        <p>
+            You can get an API Key form-group
+            <a href="https://makersuite.google.com/app/apikey" target="_blank">Google AI Studio</a>
+        </p>
+
+    </div>
+
+    <button id="save-button">Save Settings</button>
+    <p id="success-message" class="success-message">Settings saved successfully!</p>
+
 </body>
 </html>
