--- a/js project/ai summarizer extension/options.html
+++ b/js project/ai summarizer extension/options.html
@@ -73,5 +73,7 @@
     <button id="save-button">Save Settings</button>
     <p id="success-message" class="success-message">Settings saved successfully!</p>
 
+    <script src="options.js"></script>
+
 </body>
 </html>
