--- a/js project/ai summarizer extension/popup.html
+++ b/js project/ai summarizer extension/popup.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Summarizer</title>
-
+<html>
+  <head>
+    <title>AI Summary</title>
     <style>
-         body {
+      body {
         font-family: Arial, sans-serif;
         min-width: 500px;
         min-height: 300px;
@@ -96,30 +93,27 @@
           transform: rotate(360deg);
         }
       }
-
     </style>
-
-</head>
-
-<body>
+  </head>
+  <body>
     <h2>AI Summary</h2>
 
     <div class="options">
-
-        <select id="summary_type">
-            <option value="brief">Brief</option>
-            <option value="detailed">Detailed</option>
-            <option value="bullet">Bullet Points</option>
-        </select>
-
-        <button id="summarize">Summarize</button>
-        <button id="copy-btn">Copy</button>
-
+      <select id="summary-type">
+        <option value="brief">Brief Summary</option>
+        <option value="detailed">Detailed Summary</option>
+        <option value="bullets">Bullet Points</option>
+      </select>
+      <button id="summarize">Summarize This Page</button>
+      <button id="copy-btn">Copy Summary</button>
     </div>
 
-    <pre id="result">Select a type and click Summarize...</pre>
+    <div id="result">
+      Select a summary type and click 'Summarize This Page' to generate a
+      summary.
+    </div>
 
+    <script src="config.js"></script>
     <script src="popup.js"></script>
-
-</body>
+  </body>
 </html>
